fix: converted accountId and programId into a composite key to respect composite primary key in table.